# Football_Predictor

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: best_model.pkl  odds_columns.txt  team_locations.pkl
src/: streamlit_app.py
src/utils/: model_run.py  overall_data_process.py
src/utils/data_download/: download_data.py
src/utils/data_processing/: data_cleaning.py  feature_engineering.py  final_clean.py
src/utils/model_building/: model_build.py  model_evaluation.py  model_params.py
src/utils/streamlit_app/: streamlit_app_utils.py
